--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-postcss": "^0.5.5",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
+    "grunt-war": "^0.4.8",
     "grunt-wiredep": "^2.0.0",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
