--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jshint-stylish": "^1.0.0",
     "karma": "^0.13.15",
     "karma-jasmine": "^0.3.6",
+    "karma-junit-reporter": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.19",
     "time-grunt": "^1.0.0"
