--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "grunt-ng-annotate": "^0.9.2",
     "grunt-postcss": "^0.5.5",
     "grunt-svgmin": "^2.0.0",
+    "grunt-tomcat-deploy": "^0.1.7",
     "grunt-usemin": "^3.0.0",
     "grunt-war": "^0.4.8",
     "grunt-wiredep": "^2.0.0",
+    "grunt-zip": "^0.17.1",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
